# magick-game-engine

./: CMakeLists.txt  README.md  actual_no_triangle.cpp  imgui_triangle.cpp  main.cpp  old.cpp  quad_example.cpp  triangle_example.cpp
engine/: magick.h
engine/core/: log.cpp  log.h  magick.cpp  magick.h  time.cpp  time.h
engine/graphics/: GLFWRenderer.cpp  GLFWRenderer.h  SDLRenderer.cpp  SDLRenderer.h  rect.cpp  rect.h
engine/gui/: imgui_impl_sdl.cpp  imgui_tables.cpp  imstb_textedit.h
engine/input/: Input.cpp  Input.h  Keys.h  input.cpp  input.h  virtualbutton.cpp  virtualbutton.h
engine/internal/: graphics_backend.cpp  graphics_backend.h  gui_backend.cpp  gui_backend.h  input_backend.h  platform_backend_gl.cpp  platform_backend_gl.h
engine/math/: Vec2.cpp  Vec2.h  point.cpp  point.h  vec2.h
engine/utils/: Log.cpp  Log.h
game/: game.cpp
